// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedPost should render the "Default" component correctly 1`] = `
<div
  class="bg-white rounded p-5"
>
  <div
    class="flex"
  >
    <div
      class="w-12 h-12 relative after:absolute after:w-14 after:h-14 after:-top-1 after:-left-1 after:rounded-full after:border-2 after:border-neutral"
    >
      <img
        alt="The TheBaronless's avatar"
        class="rounded-full w-full h-full"
        src="https://picsum.photos/50"
      />
    </div>
    <div
      class="flex flex-col pl-5"
    >
      <span>
        TheBaronless
      </span>
      <span
        class="text-neutral"
      >
        less than a minute ago
      </span>
    </div>
  </div>
  <p
    class="mt-5"
  >
    Lorem ipsum
  </p>
  
  
  <span
    class="flex mt-5 justify-end"
  >
    <svg
      class="text-neutral"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12.1,18.55L12,18.65L11.89,18.55C7.14,14.24 4,11.39 4,8.5C4,6.5 5.5,5 7.5,5C9.04,5 10.54,6 11.07,7.36H12.93C13.46,6 14.96,5 16.5,5C18.5,5 20,6.5 20,8.5C20,11.39 16.86,14.24 12.1,18.55M16.5,3C14.76,3 13.09,3.81 12,5.08C10.91,3.81 9.24,3 7.5,3C4.42,3 2,5.41 2,8.5C2,12.27 5.4,15.36 10.55,20.03L12,21.35L13.45,20.03C18.6,15.36 22,12.27 22,8.5C22,5.41 19.58,3 16.5,3Z"
        style="fill: currentColor;"
      />
    </svg>
    <span
      class="ml-2"
    >
      10
    </span>
  </span>
</div>
`;

exports[`FeedPost should render the "WithTrack" component correctly 1`] = `
<div
  class="bg-white rounded p-5"
>
  <div
    class="flex"
  >
    <div
      class="w-12 h-12 relative after:absolute after:w-14 after:h-14 after:-top-1 after:-left-1 after:rounded-full after:border-2 after:border-neutral"
    >
      <img
        alt="The TheBaronless's avatar"
        class="rounded-full w-full h-full"
        src="https://picsum.photos/50"
      />
    </div>
    <div
      class="flex flex-col pl-5"
    >
      <span>
        TheBaronless
      </span>
      <span
        class="text-neutral"
      >
        less than a minute ago
      </span>
    </div>
  </div>
  <p
    class="mt-5"
  >
    Lorem ipsum
  </p>
  
  <strong>
    text
  </strong>
  
  <span
    class="flex mt-5 justify-end"
  >
    <svg
      class="text-neutral"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12.1,18.55L12,18.65L11.89,18.55C7.14,14.24 4,11.39 4,8.5C4,6.5 5.5,5 7.5,5C9.04,5 10.54,6 11.07,7.36H12.93C13.46,6 14.96,5 16.5,5C18.5,5 20,6.5 20,8.5C20,11.39 16.86,14.24 12.1,18.55M16.5,3C14.76,3 13.09,3.81 12,5.08C10.91,3.81 9.24,3 7.5,3C4.42,3 2,5.41 2,8.5C2,12.27 5.4,15.36 10.55,20.03L12,21.35L13.45,20.03C18.6,15.36 22,12.27 22,8.5C22,5.41 19.58,3 16.5,3Z"
        style="fill: currentColor;"
      />
    </svg>
    <span
      class="ml-2"
    >
      10
    </span>
  </span>
</div>
`;
